# ChangeLog for app-admin/keepassx
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/keepassx/ChangeLog,v 1.7 2006/12/30 17:07:04 opfer Exp $

  30 Dec 2006; <fauli@gentoo.org> keepassx-0.2.2.ebuild:
  fixed bug #158149....again (forgot an exclamation mark)

  23 Dec 2006; <nixnut@gentoo.org> keepassx-0.2.2.ebuild:
  Added ~ppc wrt bug 158682

  16 Dec 2006; Christian Faulhammer <opfer@gentoo.org>
  keepassx-0.2.2.ebuild:
  check x11-libs/qt-4.2.2 and beyond for USE=qt3support, see bug 158149,
  reported by Greg Wilson <drakos7@gmail.com>

  10 Dec 2006; Peter Weller <welp@gentoo.org> keepassx-0.2.2.ebuild:
  Added ~amd64 keyword wrt bug #153523

  02 Nov 2006; Christian Faulhammer <opfer@gentoo.org>
  files/keepassx.desktop:
  corrected desktop file with correct path to icon, reported by Torsten Krah
  <tkrah@fachschaft.imn.htwk-leipzig.de> in bug #153794

  31 Oct 2006; Christian Faulhammer <opfer@gentoo.org>
  keepassx-0.2.2.ebuild:
  added braces around used DEPEND variable, just a cosmetic change

*keepassx-0.2.2 (31 Oct 2006)

  31 Oct 2006; Christian Faulhammer <opfer@gentoo.org>
  +files/keepassx.desktop, +metadata.xml, +keepassx-0.2.2.ebuild:
  initial import: Taken from Sunrise overlay, provided in the first place by
  Luca Rosellini <luca.rosellini@libero.it>, Michael Mauch
  <michael.mauch@gmx.de>, Arthur Koziel <arthur.koziel@dkh-multigaming.de> and
  Torsten Krah <tkrah@fachschaft.imn.htwk-leipzig.de> in bug #119907
