@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/keepassx
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/keepassx/ChangeLog,v 1.7 2006/12/30 17:07:04 opfer Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-admin/keepassx/ChangeLog,v 1.8 2007/01/01 22:18:38 swegener Exp $
+
+  01 Jan 2007; Sven Wegener <swegener@gentoo.org> keepassx-0.2.2.ebuild:
+  Quote has_version argument because of > operator. Use full atoms for
+  built_with_use.
 
   30 Dec 2006; <fauli@gentoo.org> keepassx-0.2.2.ebuild:
   fixed bug #158149....again (forgot an exclamation mark)
